Small addition to our page content.

--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Ola</title>
 </head>
 <body>
-<h1>Bem vindos ao Cousera</h1>
+<h1>Bem vindos ao Cousera. É um curso top</h1>
 </body>
 </html>
